# Wraith

./: .clang-format  .gitignore  2DGE.rar  CMakeLists.txt  Gen.bat  LICENSE  README.md
.github/workflows/: clang-format.yml  windows.yml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: compile_shaders.cmake  compiler_features.cmake  compiler_warnings.cmake  conan.cmake  imgui.cmake
editor/: CMakeLists.txt
editor/src/: Editor.cpp  Editor.h  main.cpp
editor/src/Panels/: BarPanel.cpp  BarPanel.h  DemoPanel.h  Panel.cpp  Panel.h  PanelGroup.cpp  PanelGroup.h  PanelManager.cpp  PanelManager.h  PanelSettings.cpp  PanelSettings.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
editor/src/Panels/Debug/: DemoPanel.cpp  DemoPanel.h  ThreadSchedulerPanel.cpp  ThreadSchedulerPanel.h
editor/src/Panels/Play/: BarPanel.cpp  BarPanel.h  ViewportPanel.cpp  ViewportPanel.h
editor/src/Panels/Scene/: PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
engine/: CMakeLists.txt
engine-lib/: CMakeLists.txt
engine-lib/src/: App.cpp  App.h  Engine.cpp  Engine.h
engine-lib/src/Core/: Common.h  Filewatcher.cpp  Filewatcher.h  Logger.cpp  Logger.h
engine-lib/src/Core/Math/: Mat3.h  Mat4.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
engine-lib/src/Graphics/: Buffer.cpp  Buffer.h  ContentManager.cpp  ContentManager.h  DXUtil.h  Framework.cpp  Framework.h  ImageFormat.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.h  RenderManager.cpp  RenderManager.h  Sampler.h  Shader.cpp  Shader.h  ShaderReflection.cpp  ShaderReflection.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
engine-lib/src/Scene/: Components.h  Scene.cpp
engine-lib/src/Window/: Event.h  VideoMode.h  Window.cpp  Window.h  WindowStyle.h
engine/cmake/: generate_version.cmake
engine/src/: App.cpp  Application.cpp  Application.h  Engine.cpp  Engine.h  Version.h  Wraith.h
engine/src/Core/: Common.h  Constants.h  EntryPoint.h  Filewatcher.cpp  Filewatcher.h  Logger.cpp  Logger.h  Singleton.h  StringID.h  Timer.h  Types.h
engine/src/Core/Math/: Mat.h  Mat3.h  Mat4.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
engine/src/Graphics/: BaseRenderer.h  BlendState.cpp  BlendState.h  Buffer.cpp  Buffer.h  Camera.h  ContentManager.cpp  ContentManager.h  DXUtil.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameInfo.h  Framework.cpp  Framework.h  ImageFormat.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.h  RenderManager.cpp  RenderManager.h  RenderSystem.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  ShaderReflection.cpp  ShaderReflection.h  SpriteRenderer.cpp  SpriteRenderer.h  TestRenderSystem.cpp  TestRenderSystem.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureID.h  TextureManager.cpp  TextureManager.h  (+17 more)
engine/src/Graphics/Models/: Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  StaticMesh.cpp  StaticMesh.h
engine/src/Graphics/Text/: Font.cpp  Font.h  FontManager.cpp  FontManager.h  Text.h
engine/src/Input/: Input.cpp  Input.h  Keys.h
engine/src/Precompiled/: Precompiled.cpp  Precompiled.h
engine/src/Scene/: Archive.h  Components.h  EditorCamera.cpp  EditorCamera.h  Entity.h  Scene.cpp  Scene.h  ScriptableEntity.h
engine/src/Threading/: PersistentJob.cpp  PersistentJob.h  PersistentWork.cpp  PersistentWork.h  ProcessingJob.cpp  ProcessingJob.h  ProcessingThread.cpp  ProcessingThread.h  Thread.cpp  Thread.h  ThreadScheduler.cpp  ThreadScheduler.h  WorkerThread.cpp  WorkerThread.h
engine/src/UI/: ImGuiLayer.cpp  ImGuiLayer.h
engine/src/Window/: Input.cpp  Input.h  Keys.h  Mouse.h  VideoMode.cpp  Window.cpp  Window.h
scripts/: gen  gen.bat
